# django-habit-tracker-api

./: .coveragerc  .env.example  .gitignore  CELERY_SETUP.md  README.md  instruction.txt  pyproject.toml  pytest.ini
config/: __init__.py  celery.py  settings.py  urls.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  telegram.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: test_api.py  test_models.py  test_tasks.py  test_validators.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_api.py  test_models.py
